--- a/app/weather/weather.html
+++ b/app/weather/weather.html
@@ -4,7 +4,7 @@
             <span style="margin-top: -10px" flex>Sensor Values</span>
             <div md-theme="{{themePrimaryButtons}}" layout="row" layout-align="start center" style="font-size: 14px">
                 <span style="margin-right: 8px;">Historic values at a</span>
-                <md-input-container md-no-float style="margin-left: 8px; padding: 0; width: 40px"
+                <md-input-container md-no-float style="margin: 8px 0px; padding: 0; height: 30px"
                                     class="" title="Data Interval Grouping">
                     <input flex style="color: inherit;" placeholder="Interval" ng-model="vm.sensorGroupingInterval" type="number"
                            ng-model-options="{ debounce: 750 }" ng-change="vm.historicalRangeChanged()" min="0" max="1800">
@@ -25,7 +25,7 @@
                 <span style="margin-left: 25px; min-width: 158px; max-width: 158px;" class="subheader-text">
                     Wind Direction ({{vm.latestWindDirection | number:1}}°)
                 </span>
-                <span style="width: 120px;" class="subheader-text">
+                <span style="width: 140px;" class="subheader-text">
                     Sensor
                 </span>
                 <span style="width: 88px;" class="subheader-text">
@@ -46,7 +46,7 @@
                 <div ng-repeat="sensor in vm.ancResource.sensorList track by $index" title="{{sensor.description}}"
                      class="resource-sensor-item" ng-if="sensor.name !== 'wind direction'"
                      layout="row" class="unselectable">
-                    <span style="min-width: 120px" ng-class="vm.classNameFromPythonID(sensor)">{{sensor.name}}</span>
+                    <span style="min-width: 140px" ng-class="vm.classNameFromPythonID(sensor)">{{sensor.name}}</span>
                     <span class="resource-sensor-value-item" style="width: 80px"
                           ng-show="sensor.sensorValue">{{sensor.value | number:1}}</span>
                     <span style="margin-left: 8px; width: 60px" ng-if="vm.maxSensorValue[sensor.name]">
