--- a/app/health/receptor-pointing/receptor-pointing.html
+++ b/app/health/receptor-pointing/receptor-pointing.html
@@ -19,7 +19,7 @@
             </md-menu-item>
             <md-menu-item>
                 <md-checkbox class="md-primary" ng-model="vm.showNames" ng-change="vm.redraw(false)"
-                             ng-init="vm.showNames = false">
+                             ng-init="vm.showNames = true">
                     <span>Show Names</span>
                 </md-checkbox>
             </md-menu-item>
