--- a/app/video/video.html
+++ b/app/video/video.html
@@ -52,7 +52,7 @@
                     <md-button ng-click="vm.tiltUp()" class="md-icon-button md-raised md-primary" title="Tilt Up 5 Degrees">
                         <span class="fa fa-caret-up md-fab-fa-icon-small"></span>
                     </md-button>
-                    <div layout="row" style="">
+                    <div layout="row">
                         <md-button ng-click="vm.panFarLeft()" class="md-icon-button md-raised md-primary" title="Pan Far Left">
                             <span class="fa fa-step-backward md-fab-fa-icon-small"></span>
                         </md-button>
