--- a/app/weather/weather.html
+++ b/app/weather/weather.html
@@ -5,7 +5,7 @@
             <div md-theme="{{themePrimaryButtons}}" layout="row" layout-align="start center" style="font-size: 14px">
                 <span style="margin-right: 8px;">Historic values at a</span>
                 <md-input-container md-no-float style="margin: 8px 0px; padding: 0; height: 30px"
-                                    class="" title="Data Interval Grouping">
+                                    title="Data Interval Grouping">
                     <input flex style="color: inherit;" placeholder="Interval" ng-model="vm.sensorGroupingInterval" type="number"
                            ng-model-options="{ debounce: 750 }" ng-change="vm.historicalRangeChanged()" min="0" max="1800">
                 </md-input-container>
@@ -91,7 +91,7 @@
                             <label style="width: 53px; font-weight: normal; margin-top: 4px;">Y Min:</label>
                             <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0; height: 30px"
                                                 class="md-primary" title="Set the desired Y-Axis Minimum Value">
-                                <input flex style="" placeholder="Minimum" ng-model="vm.yAxisWindMinValue"
+                                <input flex placeholder="Minimum" ng-model="vm.yAxisWindMinValue"
                                        ng-change="vm.showWindOptionsChanged()" type="number"
                                        ng-model-options="{ debounce: 300 }">
                             </md-input-container>
@@ -103,7 +103,7 @@
                             <label style="width: 53px; font-weight: normal; margin-top: 4px;">Y Max:</label>
                             <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0;  height: 30px"
                                                 class="md-primary" title="Set the desired Y-Axis Maximum Value">
-                                <input flex style="" placeholder="Maximum" ng-model="vm.yAxisWindMaxValue"
+                                <input flex placeholder="Maximum" ng-model="vm.yAxisWindMaxValue"
                                        ng-change="vm.showWindOptionsChanged()" type="number"
                                        ng-model-options="{ debounce: 300 }">
                             </md-input-container>
@@ -146,7 +146,7 @@
                             <label style="width: 53px; font-weight: normal; margin-top: 4px;">Y Min:</label>
                             <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0; height: 30px"
                                                 class="md-primary" title="Set the desired Right Y-Axis Minimum Value">
-                                <input flex style="" placeholder="Minimum" ng-model="vm.yAxisRightMinValue"
+                                <input flex placeholder="Minimum" ng-model="vm.yAxisRightMinValue"
                                        ng-change="vm.showOptionsChanged()" type="number"
                                        ng-model-options="{ debounce: 300 }">
                             </md-input-container>
@@ -158,7 +158,7 @@
                             <label style="width: 53px; font-weight: normal; margin-top: 4px;">Y Max:</label>
                             <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0; height: 30px"
                                                 class="md-primary" title="Set the desired Right Y-Axis Maximum Value">
-                                <input flex style="" placeholder="Maximum" ng-model="vm.yAxisRightMaxValue"
+                                <input flex placeholder="Maximum" ng-model="vm.yAxisRightMaxValue"
                                        ng-change="vm.showOptionsChanged()" type="number"
                                        ng-model-options="{ debounce: 300 }">
                             </md-input-container>
@@ -175,7 +175,7 @@
                             <label style="width: 53px; font-weight: normal; margin-top: 4px;">Y Min:</label>
                             <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0; height: 30px"
                                                 class="md-primary" title="Set the desired Y-Axis Minimum Value">
-                                <input flex style="" placeholder="Minimum" ng-model="vm.yAxisMinValue"
+                                <input flex placeholder="Minimum" ng-model="vm.yAxisMinValue"
                                        ng-change="vm.showOptionsChanged()" type="number"
                                        ng-model-options="{ debounce: 300 }">
                             </md-input-container>
@@ -187,7 +187,7 @@
                             <label style="width: 53px; font-weight: normal; margin-top: 4px;">Y Max:</label>
                             <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0; height: 30px"
                                                 class="md-primary" title="Set the desired Y-Axis Maximum Value">
-                                <input flex style="" placeholder="Maximum" ng-model="vm.yAxisMaxValue"
+                                <input flex placeholder="Maximum" ng-model="vm.yAxisMaxValue"
                                        ng-change="vm.showOptionsChanged()" type="number"
                                        ng-model-options="{ debounce: 300 }">
                             </md-input-container>
