--- a/app/widgets/gantt/gantt-widget.html
+++ b/app/widgets/gantt/gantt-widget.html
@@ -1,4 +1,4 @@
-<div layout="column" class="" style="box-shadow: none;" ng-controller="GanttWidgetCtrl as vm">
+<div layout="column" style="box-shadow: none;" ng-controller="GanttWidgetCtrl as vm">
 
     <md-toolbar class="widget-toolbar md-whiteframe-z1">
     </md-toolbar>
