--- a/app/widgets/navigation/navigation-widget.html
+++ b/app/widgets/navigation/navigation-widget.html
@@ -13,7 +13,7 @@
         <navigation-pie svg-title="System & User Logs" data="vm.logsNavData" width="280" height="280"></navigation-pie>
     </div>
 
-    <div layout="row" layout-align="center center" class="" md-theme="{{$root.themePrimaryButtons}}">
+    <div layout="row" layout-align="center center" md-theme="{{$root.themePrimaryButtons}}">
         <md-button class="md-raised md-primary" ng-click="$root.stateGo('video')">Video</md-button>
         <md-button class="md-raised md-primary" ng-click="$root.stateGo('instrumental-config')">Instrumental Configuration</md-button>
         <md-button class="md-raised md-primary" ng-click="$root.stateGo('admin')">User Administration</md-button>
