--- a/app/health/receptor-pointing/receptor-pointing.html
+++ b/app/health/receptor-pointing/receptor-pointing.html
@@ -34,7 +34,7 @@
                     <label style="width: 65px; font-weight: normal; margin-top: 4px;">Trail Dots:</label>
                     <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0;"
                                         class="md-primary" title="Set the desired trail dots">
-                        <input flex style="" placeholder="Minimum" ng-model="vm.trailDots" ng-init="vm.trailDots = 30"
+                        <input flex placeholder="Minimum" ng-model="vm.trailDots" ng-init="vm.trailDots = 30"
                                ng-change="vm.redraw(false)" type="number" ng-model-options="{ debounce: 300 }"
                                step="5" max="100" min="1">
                     </md-input-container>
