--- a/app/sensor-graph/sensor-graph.html
+++ b/app/sensor-graph/sensor-graph.html
@@ -39,7 +39,7 @@
 
             <div layout="row" style="margin-top: 4px">
                 <md-input-container md-no-float style="margin: 0; padding: 0; width: 135px; height: 30px">
-                    <input type="text" ng-change="vm.startTimeChange()" class=""
+                    <input type="text" ng-change="vm.startTimeChange()"
                            ng-model="vm.sensorStartDateReadable" placeholder="Start Date (UTC)"
                            ng-class="{'input-error':vm.dateTimeError}" title="Start Date 'HH:mm:ss yyyy-MM-dd' UTC"
                            ng-click="$event.stopPropagation()"/>
@@ -72,7 +72,7 @@
 
             <div layout="row" layout="center center" style="margin: 0px; padding: 4px" ng-show="!vm.showRelativeTime">
                 <md-input-container md-no-float style="margin: 0; padding: 0; width: 135px; height: 30px">
-                    <input type="text" ng-change="vm.endTimeChange()" class=""
+                    <input type="text" ng-change="vm.endTimeChange()"
                            ng-model="vm.sensorEndDateReadable" placeholder="End Date (UTC)"
                            ng-class="{'input-error':vm.endDateTimeError}" title="End Date 'HH:mm:ss yyyy-MM-dd' (UTC)"
                            ng-click="$event.stopPropagation()"/>
@@ -238,7 +238,7 @@
                             <label style="width: 53px; font-weight: normal; margin-top: 4px;">Y Min:</label>
                             <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0; height: 30px"
                                                 class="md-primary" title="Set the desired Y-Axis Minimum Value">
-                                <input flex style="" placeholder="Minimum" ng-model="vm.yAxisMinValue"
+                                <input flex placeholder="Minimum" ng-model="vm.yAxisMinValue"
                                        ng-change="vm.showOptionsChanged()" type="number"
                                        ng-model-options="{ debounce: 300 }">
                             </md-input-container>
@@ -250,7 +250,7 @@
                             <label style="width: 53px; font-weight: normal; margin-top: 4px;">Y Max:</label>
                             <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0; height: 30px"
                                                 class="md-primary" title="Set the desired Y-Axis Maximum Value">
-                                <input flex style="" placeholder="Maximum" ng-model="vm.yAxisMaxValue"
+                                <input flex placeholder="Maximum" ng-model="vm.yAxisMaxValue"
                                        ng-change="vm.showOptionsChanged()" type="number"
                                        ng-model-options="{ debounce: 300 }">
                             </md-input-container>
