--- a/app/sensor-list/sensor-list.html
+++ b/app/sensor-list/sensor-list.html
@@ -141,7 +141,7 @@
                             <label style="width: 53px; font-weight: normal; margin-top: 4px;">Y Min:</label>
                             <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0; height: 30px"
                                                 class="md-primary" title="Set the desired Y-Axis Minimum Value">
-                                <input flex style="" placeholder="Minimum" ng-model="vm.yAxisMinValue"
+                                <input flex placeholder="Minimum" ng-model="vm.yAxisMinValue"
                                        ng-change="vm.showOptionsChanged()" type="number"
                                        ng-model-options="{ debounce: 300 }">
                             </md-input-container>
@@ -153,7 +153,7 @@
                             <label style="width: 53px; font-weight: normal; margin-top: 4px;">Y Max:</label>
                             <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0; height: 30px"
                                                 class="md-primary" title="Set the desired Y-Axis Maximum Value">
-                                <input flex style="" placeholder="Maximum" ng-model="vm.yAxisMaxValue"
+                                <input flex placeholder="Maximum" ng-model="vm.yAxisMaxValue"
                                        ng-change="vm.showOptionsChanged()" type="number"
                                        ng-model-options="{ debounce: 300 }">
                             </md-input-container>
