--- a/app/health/receptor-status/receptor-status.html
+++ b/app/health/receptor-status/receptor-status.html
@@ -16,7 +16,7 @@
         <div ng-show="!vm.sortBySubarrays" layout="column" style="text-align: center">
             <div ng-show="vm.showGraphics">
                 <div ng-repeat="receptor in vm.receptorsData" class="md-whiteframe-z1" style="display: -webkit-inline-box; position: relative; margin: 2px;"
-                    ng-class="{'receptor-graphic-sensors-nominal': receptor.sensors_ok.status === 'nominal', 'receptor-graphic-sensors-error': receptor.sensors_ok.status === 'error', 'receptor-graphic-stow': receptor.mode.value === 'STOW', 'receptor-graphic-stop': receptor.mode.value === 'STOP'}">
+                    ng-class="{'receptor-graphic-sensors-nominal': receptor.sensors_ok.status === 'nominal', 'receptor-graphic-sensors-error': receptor.sensors_ok.status === 'error', 'receptor-graphic-sensors-warn': receptor.sensors_ok.status === 'warn', 'receptor-graphic-stow': receptor.mode.value === 'STOW', 'receptor-graphic-stop': receptor.mode.value === 'STOP'}">
                     <div class="receptor-graphic-svg" ng-include="'images/receptor.svg'"></div>
                     <h2 class="receptor-graphic-name">{{receptor.name}}{{receptor.lock.value? '*' : ''}}</h2>
                     <div class="receptor-graphic-labels" layout="column">
