fixed layout for drafts row when assigning drafts to a subarray

--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -297,7 +297,7 @@
                                        style="margin: 0; max-width: 24px; min-width: 24px;" title="Delete Draft">
                                 <span style="display: inherit" class="fa fa-remove"></span>
                             </md-button>
-                            <div layout="column" layout-align="start" style="padding-top: 4px; width: 125px">
+                            <div layout="column" layout-align="start" style="padding-top: 4px; min-width: 125px; max-width: 125px">
                             <span
                                 ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
                                 style="font-size: 14px; font-weight: bold"
