--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -44,8 +44,7 @@
                         md-theme="{{subarray.state === 'inactive'? 'grey' : subarray.state === 'active'? 'green' : subarray.state === 'error'? 'amber' : 'deep-purple'}}"
                         ng-class="{'md-hue-2': subarray.state !== 'inactive'}" class="md-whiteframe-z1"
                         layout="row" layout-align="center center" title="{{subarray.description}}"
-                        style="max-height: 64px; min-height: 64px; position: relative; margin-top: -7px"
-                        ng-click="$root.stateGoWithSubId('scheduler.observations.detail', vm.subarray_id)">
+                        style="max-height: 64px; min-height: 64px; position: relative; margin-top: -7px">
                         <span style="margin-left: 8px;">SUBARRAY {{subarray.id}} -
                             <span><b>{{subarray.state}}</b></span>
                             <span ng-if="subarray.maintenance">{{"- in maintenance"}}</span>
@@ -112,7 +111,7 @@
                                                  class="schedule-draft-data-list md-whiteframe-z1"
                                                  ng-class="{'maintenance-bg':subarray.maintenance}">
                         <div
-                            md-virtual-repeat="item in vm.scheduleDraftData | filter:{sub_nr:subarray.id, state:'DRAFT'} | orderBy:id_code:true"
+                            md-virtual-repeat="item in vm.scheduleDraftData | filter:{sub_nr:subarray.id, state:'DRAFT'} | orderBy:vm.draftsOrderBy.value:vm.draftsOrderBy.reverse"
                             style="padding: 0 4px" flex layout="row" layout-align="start center"
                             ng-click="item.confirmDelete = false; vm.setSelectedScheduleDraft(item)"
                             ng-class="{'selected-schedule-row': item === vm.selectedScheduleDraft}"
@@ -168,7 +167,8 @@
 
                     <md-toolbar ng-class="{'md-hue-2': subarray.state !== 'inactive'}" style="margin-top: 8px"
                                 class="md-whiteframe-z1 md-toolbar-tools-medium"
-                                layout="row" layout-align="center center" title="{{subarray.description}}">
+                                layout="row" layout-align="center center" title="{{subarray.description}}"
+                                ng-click="$root.stateGoWithSubId('scheduler.observations.detail', vm.subarray_id)">
                         <span flex style="margin-top: -5px;">Observations</span>
 
                         <div class="unselectable list-subheader-title" layout="row" layout-align="start center"
@@ -284,7 +284,7 @@
                 </md-toolbar>
                 <md-virtual-repeat-container flex class="schedule-draft-data-list" flex>
                     <div
-                        md-virtual-repeat="item in vm.scheduleDraftData | filter:{sub_nr:null} | regexSearch:vm.draftsOrderByFields:vm.q"
+                        md-virtual-repeat="item in vm.scheduleDraftData | filter:{sub_nr:null} | regexSearch:vm.draftsOrderByFields:vm.q | orderBy:id_code:true"
                         title="{{item.id_code}} - {{item.description}} - {{item.type}} - {{item.desired_start_time}}"
                         style="cursor: pointer !important;"
                         ng-class="{'selected-resource-item': item.selected}"
